# claude-tmt-researcher

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  run-research.md
prompts/: argument_architect.md  argument_validator.md  brainstormer.md  novelty_checker.md  researcher.md  reviewer.md
scripts/: setup_notion.py
src/tmt_researcher/: __init__.py  main.py
src/tmt_researcher/config/: __init__.py
src/tmt_researcher/config/prompts/: validator.md
