[project]
name = "tmt-researcher"
version = "0.1.0"
description = "Multi-agent pipeline for TMT law article research focused on India"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "pydantic-settings>=2.0.0",
    "structlog>=24.0.0",
]

[project.scripts]
tmt-researcher = "tmt_researcher.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tmt_researcher"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
